# othello

./: Cargo.toml  README.md  deny.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
src/: cpu.rs  main.rs  model.rs  ui.rs  usecase.rs
