[package]
name = "othello"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
eframe = "0.33"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
